5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1671_1879.log
== TEST (2019-04-24 02:09:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NÚMERO DE HORAS EXTRAS: "))
nt= float(input("NÚMERO DE HORAS NÃO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",f,"de falta")
if (h<=400):
	print("R$100")
elif (h>400):
	print("R$400")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(ne,"extras","e",f,"de falta")
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:09:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NÚMERO DE HORAS NÃO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",f,"de falta")
if (h<=400):
	print("R$100")
elif (h>400):
	print("R$400")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(ne,"extras","e",f,"de falta")
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:09:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NÃO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",f,"de falta")
if (h<=400):
	print("R$100")
elif (h>400):
	print("R$400")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(ne,"extras","e",f,"de falta")
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:10:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",f,"de falta")
if (h<=400):
	print("R$100")
elif (h>400):
	print("R$400")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(ne,"extras","e",f,"de falta")
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:10:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",f,"de falta")
if (h<=400):
	print("R$100")
elif (h>400):
	print("R$400")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(ne,"extras","e",f,"de falta")
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:10:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")

if (h<=400):
	print("R$100")
elif (h>400):
	print("R$400")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 02:11:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")

if (h<=400):
	print("R$100")
elif (h>400):
	print("R$400")
-- EXECUTION TIME:
0.192735
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$400
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:11:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")

if (h<=400):
	print("R$100")
elif (h>400):
	print("R$400")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:13:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")
print(h)
if (h<=400):
	print("R$100")
elif (h>400):
	print("R$400")
-- OUTPUT:
420.0 extras e 20.0 de falta
415.0
R$400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:13:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")
print(h)
if (h<=400):
	print("R$100")
elif (h>400):
	print("R$400")
-- OUTPUT:
420.0 extras e 20.0 de falta
415.0
R$400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:13:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")
print(h)
if (h<=400):
	print("R$100")
elif (h>400):
	print("R$400")
-- OUTPUT:
420.0 extras e 20.0 de falta
415.0
R$400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:14:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")

if (h<=400):
	print(round("R$", h),2)
elif (h>400):
	print(round("R$", h),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round("R$", h),2)
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:15:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")

if (h<=400):
	f= round(h, 2)
	print("R$", f)
elif (h>400):
	f= round(h, 2)
	print("R$", f)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:15:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")

if (h<=400):
	f= round(h, 2)
	print("R$", f)
elif (h>400):
	f= round(h, 2)
	print("R$", f)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 02:16:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")

if (h<=400):
	f= round(h, 2)
	print("R$", f)
elif (h>400):
	f= round(h, 2)
	print("R$", f)
-- EXECUTION TIME:
0.123667
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 415.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 375.5
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 289.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:17:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")

if (h<=400):
	print("R$100")
elif (h>400):
	print("R$400")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:17:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= float((ne)-1/4*(nt))

print(ne,"extras","e",nt,"de falta")

if (h<=400):
	print("R$100")
elif (h>400):
	print("R$400")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:18:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= float((ne)-1/4*(nt))

print(ne,"extras","e",nt,"de falta")

if (h<=400):
	print("R$100.0")
elif (h>400):
	print("R$400.0")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:18:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= float((ne)-1/4*(nt))

print(ne,"extras","e",nt,"de falta")

if (h<=400):
	print("R$100.0")
elif (h>400):
	print("R$400.0")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 02:18:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= float((ne)-1/4*(nt))

print(ne,"extras","e",nt,"de falta")

if (h<=400):
	print("R$100.0")
elif (h>400):
	print("R$400.0")
-- EXECUTION TIME:
0.105665
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$400.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:19:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= float((ne)-1/4*(nt))

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$400")
elif (h<=400):
	print("R$100")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:19:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= float((ne)-1/4*(nt))

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$400")
elif (h<=400):
	print("R$100")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 02:19:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= float((ne)-1/4*(nt))

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$400")
elif (h<=400):
	print("R$100")
-- EXECUTION TIME:
0.111673
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$400
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 02:19:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= float((ne)-1/4*(nt))

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", h)
elif (h<=400):
	print("R$", h)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 02:19:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= float((ne)-1/4*(nt))

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", h)
elif (h<=400):
	print("R$", h)
-- EXECUTION TIME:
0.168962
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 415.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 375.5
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 289.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:53:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= float((ne)-1/4*(nt))

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", h)
elif (h<=400):
	print("R$", h)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:54:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", h)
elif (h<=400):
	print("R$", h)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:55:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", 500)
elif (h<=400):
	print("R$", 100)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 12:55:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", 500)
elif (h<=400):
	print("R$", 100)
-- EXECUTION TIME:
0.139633
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:55:34) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", 500)
elif (h<=400):
	print("R$", 100)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:57:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= round((ne)-1/4*(nt))

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", 500)
elif (h<=400):
	print("R$", 100)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 12:57:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= round((ne)-1/4*(nt))

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", 500)
elif (h<=400):
	print("R$", 100)
-- EXECUTION TIME:
0.137557
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:57:34) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= round((ne)-1/4*(nt))

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", 500)
elif (h<=400):
	print("R$", 100)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:57:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= round((ne)-1/4*(nt),2)

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", 500)
elif (h<=400):
	print("R$", 100)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 12:57:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= round((ne)-1/4*(nt),2)

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", 500)
elif (h<=400):
	print("R$", 100)
-- EXECUTION TIME:
0.136259
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:35:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= round((ne)-1/4*(nt),2)

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", 500)
elif (h<=400):
	print("R$", 100)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:49:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= round((ne)-1/4*(nt),2)

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", 500)
elif (h<=400):
	print("R$", 100)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 13:49:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= round((ne)-1/4*(nt),2)

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", 500)
elif (h<=400):
	print("R$", 100)
-- EXECUTION TIME:
0.177326
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:50:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= round((ne)-1/4*(nt),2)

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", 500)
elif (h<=400):
	print("R$", 100)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:51:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", round(500, 2))
elif (h<=400):
	print("R$", round(100, 2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 13:52:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", round(500, 2))
elif (h<=400):
	print("R$", round(100, 2))
-- EXECUTION TIME:
0.174654
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:53:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", round(500, 2))
elif (h<=400):
	print("R$", round(100, 2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:53:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", round(500, 2))
elif (h<=400):
	print("R$", round(100, 2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:53:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", round(500.00, 2))
elif (h<=400):
	print("R$", round(100.00, 2))
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 13:54:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne= float(input("NUMERO DE HORAS EXTRAS: "))
nt= float(input("NUMERO DE HORAS NAO TRABALHADAS: "))
h= (ne)-1/4*(nt)

print(ne,"extras","e",nt,"de falta")

if (h>400):
	print("R$", round(500.00, 2))
elif (h<=400):
	print("R$", round(100.00, 2))
-- EXECUTION TIME:
0.157446
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
